# lingo-db

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
docs/: create_users.sql  pipeql1.mlir  pipeql2.mlir  pipeql3.mlir  seed_users.sql  seed_users_bulk.sql  test_pipeql_1.sql  test_pipeql_2.sql  test_pipeql_3.sql  test_sql_2.sql
include/lingodb/compiler/frontend/PipeQL/: Parser.h
include/lingodb/execution/: Execution.h  Frontend.h  Timing.h
src/compiler/frontend/PipeQL/: CMakeLists.txt  MLIRPipeQLVisitor.cpp  MLIRPipeQLVisitor.h  Parser.cpp
src/compiler/frontend/SQL/: Parser.cpp
src/execution/: Execution.cpp  Frontend.cpp
src/tools/: CMakeLists.txt  pipeql-to-mlir.cpp  query-table.cpp  run-sql.cpp  sql-to-mlir.cpp
test/unittests/: CMakeLists.txt
